# slides-transcription

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_extract_audio.py  test_run.py
tests/assets/: multimedia.pptx
transcriber/: __init__.py  cli.py  parser.py  transcribe_slides.py
