[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slides-transcriber"
version = "0.1.0"
authors = [
  { name="Jash Vira", email="jashvira2001404@gmail.com" },
]
description = "A tool to transcribe audio from PowerPoint slides"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-pptx>=0.6.21",
    "openai>=1.0.0",
    "tqdm>=4.65.0",
]

[project.scripts]
transcribe-slides = "transcriber.cli:main"
